--- a/notebooks/quantum_ops_intro.ipynb
+++ b/notebooks/quantum_ops_intro.ipynb
@@ -3,15 +3,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Activate the package from its development location\n",
-    "import Pkg\n",
-    "Pkg.activate(\"/home/lapeyre/.julia/gjl-quantum/QuantumOps\")"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "First, import some identifiers for types"
    ],
    "metadata": {}
@@ -31,19 +22,28 @@
    "source": [
     "# QuantumOps\n",
     "## Overview\n",
+    "\n",
+    " The main design idea was to provide a straightforward implementation of operators\n",
+    " that is sufficiently general to represent both Pauli and Fermionic operators (and possibly others);\n",
+    " to see if the implementation could be fairly efficient while not requiring too\n",
+    " much code specialized to the concrete types. The operators should have similar\n",
+    " functionality to `SparsePauliOp` in qiskit.quantum_info and `FermionicOp` in qiskit_nature.\n",
+    "\n",
     "`QuantumOps` is built mainly around three levels of operator types\n",
-    "* `AbstractOp` representing single-particle Fermionic or Pauli operators\n",
-    "* `OpTerm` a parametric type containing a string of operators as an `AbstractVector{<:AbstractOp}`\n",
-    "  and a coefficient. `OpTerm` represents a multi-particle term. The string type may be a dense\n",
-    " `Vector` or a `SparseVector` (with identities omitted). The coefficient may be numeric or symbolic.\n",
-    "* `OpSum` a parametric type representing a sum of `OpTerm`s.\n",
+    "* `AbstractOp` -- representing single-particle Fermionic or Pauli operators\n",
+    "* `OpTerm` -- a parametric type implementing a string of operators as an `AbstractVector{<:AbstractOp}`\n",
+    "  and a coefficient. `OpTerm` represents a multi-particle/mode term. The string type may be a dense\n",
+    " `Vector` or a `SparseVector` (with identities not stored). The coefficient may be numeric or symbolic.\n",
+    "* `OpSum` a parametric type representing a sum of `OpTerm`s. `OpSum` is implemented as an `Vector`\n",
+    "  of `OpTerms` that are maintained in a canonical order.\n",
     "\n",
     "Some features are\n",
     "* `QuantumOps` tries to make the structures and methods efficient, but there is little done to optimize\n",
     "   them. Still, `QuantumOps` is often one to three orders of magnitude faster\n",
-    "   than Qiskit.\n",
+    "   than Qiskit. [Note: This was before the series of improvements to `SparsePauliOp`.]\n",
     "* `QuantumOps` works together `ElectronicStructure.jl` to represent electonic Hamiltonians.\n",
     "*  The Jordan-Wigner transform is implemented as an example.\n",
+    "*  A package `qisit_alt` provides a demonstration of wrappers allowing Qiskit classes as input and output.\n",
     "\n",
     "## Simple operators -- `AbstractOp`\n",
     "Types for Fermionic and Pauli operators on a single mode or qubit have `AbstractOp` as an ancestor.\n",
@@ -124,7 +124,8 @@
    "source": [
     "`PauliI` may be more efficient in some circumstances.\n",
     "None (almost) of `QuantumOps` is written explicitly against a subtype of `AbstractPauli`,\n",
-    "so `Pauli` and `PauliI` may be used interchangeably. Eventually probably only one of the two will be retained.\n",
+    "so `Pauli` and `PauliI` may be used interchangeably. Eventually, probably only one of the two will be retained.\n",
+    "We won't consider `PauliI` in this document.\n",
     "\n",
     "All subtypes of `AbstractPauliOp` may instantiated by an integer index like this"
    ],
@@ -176,31 +177,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The alternate encoding works the same way"
-   ],
-   "metadata": {}
-  },
-  {
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "(PauliI: I, PauliI: X, PauliI: Y, PauliI: Z)"
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
-   "cell_type": "code",
-   "source": [
-    "PauliI.((0, 1, 2, 3))"
-   ],
-   "metadata": {},
-   "execution_count": 7
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "Seven (or maybe six) Fermi operators are supported"
    ],
    "metadata": {}
@@ -213,7 +189,7 @@
       "text/plain": "(FermiOp: I, FermiOp: N, FermiOp: E, FermiOp: +, FermiOp: -, FermiOp: 0, FermiOp: Z)"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 7
     }
    ],
    "cell_type": "code",
@@ -221,7 +197,7 @@
     "FermiOp.((0:6...,))"
    ],
    "metadata": {},
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -252,7 +228,7 @@
       "text/plain": "(Pauli: I, Pauli: X, Pauli: Y, Pauli: Z)"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 8
     }
    ],
    "cell_type": "code",
@@ -261,38 +237,13 @@
     "(I, X, Y, Z)"
    ],
    "metadata": {},
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
    "source": [
-    "The same variables are defined for `PauliI`"
-   ],
-   "metadata": {}
-  },
-  {
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "PauliI: X"
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
-   "cell_type": "code",
-   "source": [
-    "QuantumOps.PaulisI.X"
-   ],
-   "metadata": {},
-   "execution_count": 10
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "The details of `Pauli`, `PauliI`, and `FermiOp` are hidden. For example, even `OpTerm` and supporting code\n",
-    "knows nothing about them. But here is a look indside"
+    "The details of `Pauli` and `FermiOp` are hidden. For example, even `OpTerm` and supporting code\n",
+    "knows nothing about how they are represented. But here is a look indside"
    ],
    "metadata": {}
   },
@@ -313,7 +264,7 @@
     "dump(QuantumOps.Paulis.X)"
    ],
    "metadata": {},
-   "execution_count": 11
+   "execution_count": 9
   },
   {
    "outputs": [
@@ -331,7 +282,7 @@
     "dump(QuantumOps.PaulisI.X)"
    ],
    "metadata": {},
-   "execution_count": 12
+   "execution_count": 10
   },
   {
    "outputs": [
@@ -349,7 +300,7 @@
     "dump(QuantumOps.FermiOps.NumberOp)"
    ],
    "metadata": {},
-   "execution_count": 13
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -366,7 +317,7 @@
     "using QuantumOps: OpTerm, PauliTerm, FermiTerm"
    ],
    "metadata": {},
-   "execution_count": 14
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -383,7 +334,7 @@
       "text/plain": "PauliTerm (alias for OpTerm{Pauli, T} where T<:AbstractArray{Pauli, 1})"
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 13
     }
    ],
    "cell_type": "code",
@@ -391,7 +342,7 @@
     "OpTerm{Pauli}"
    ],
    "metadata": {},
-   "execution_count": 15
+   "execution_count": 13
   },
   {
    "outputs": [
@@ -401,7 +352,7 @@
       "text/plain": "FermiTerm (alias for OpTerm{FermiOp, T} where T<:AbstractArray{FermiOp, 1})"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 14
     }
    ],
    "cell_type": "code",
@@ -409,7 +360,7 @@
     "OpTerm{FermiOp}"
    ],
    "metadata": {},
-   "execution_count": 16
+   "execution_count": 14
   },
   {
    "outputs": [
@@ -419,40 +370,15 @@
       "text/plain": "true"
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 15
     }
    ],
    "cell_type": "code",
    "source": [
-    "PauliTerm == OpTerm{Pauli}"
+    "PauliTerm === OpTerm{Pauli}"
    ],
    "metadata": {},
-   "execution_count": 17
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "`Pauli` is the default encoding, as there is no alias for `OpTerm{PauliI}`"
-   ],
-   "metadata": {}
-  },
-  {
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "OpTerm{PauliI, T} where T<:AbstractVector{PauliI}"
-     },
-     "metadata": {},
-     "execution_count": 18
-    }
-   ],
-   "cell_type": "code",
-   "source": [
-    "OpTerm{PauliI}"
-   ],
-   "metadata": {},
-   "execution_count": 18
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -469,7 +395,7 @@
       "text/plain": "6-factor PauliTerm{Vector{Pauli}, ComplexF64}:\nIXIYIZ * (1.0 + 1.0im)"
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 16
     }
    ],
    "cell_type": "code",
@@ -477,7 +403,7 @@
     "OpTerm{Pauli}(\"IXIYIZ\", 1.0 + 1.0im)"
    ],
    "metadata": {},
-   "execution_count": 19
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -494,7 +420,7 @@
       "text/plain": "6-factor OpTerm{PauliI, Vector{PauliI}, ComplexF64}:\nIXIYIZ * (1.0 + 1.0im)"
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 17
     }
    ],
    "cell_type": "code",
@@ -502,7 +428,7 @@
     "OpTerm{PauliI}(\"IXIYIZ\", 1.0 + 1.0im)"
    ],
    "metadata": {},
-   "execution_count": 20
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -519,7 +445,7 @@
       "text/plain": "7-factor FermiTerm{Vector{FermiOp}, Float64}:\n++I--NE * 1.0"
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 18
     }
    ],
    "cell_type": "code",
@@ -527,7 +453,7 @@
     "OpTerm{FermiOp}(\"++I--NE\", 1.0)"
    ],
    "metadata": {},
-   "execution_count": 21
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -544,7 +470,7 @@
       "text/plain": "7-factor FermiTerm{Vector{FermiOp}, Complex{Int64}}:\n++I--NE * (1 + 0im)"
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 19
     }
    ],
    "cell_type": "code",
@@ -553,7 +479,7 @@
     "FermiTerm(\"++I--NE\")"
    ],
    "metadata": {},
-   "execution_count": 22
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -570,7 +496,7 @@
       "text/plain": "5-factor FermiTerm{Vector{FermiOp}, Complex{Int64}}:\n+-INE * (1 + 0im)"
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 20
     }
    ],
    "cell_type": "code",
@@ -578,22 +504,23 @@
     "FermiTerm(\"+-INE\")"
    ],
    "metadata": {},
-   "execution_count": 23
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
    "source": [
     "means $a_0^\\dagger a_1 a^\\dagger_3 a_3 a_4 a^\\dagger_4$.\n",
     "\n",
-    "\n",
-    "`OpTerm` is a parametric type with three parameters. The aliases `PauliTerm` and `FermiTerm` each \"eat\"\n",
-    "the first parameter.\n",
-    "The first parameter is an operator type `<:AbstractOp`.\n",
-    "The second parameter specifies the storage for the string of operators.\n",
-    "By default, as above, it is a dense `Vector`. For the concrete operator types that we\n",
-    "have implemented: `Pauli`, `PauliI`, and `FermiOp`, it will be an effcient, packed array of bitstype objects.\n",
-    "The third type parameter is the type of the coefficient, which can be anything, but should support multiplication\n",
-    "and addition. This may be, for example, `ComplexF64`, or a symbolic type."
+    "`OpTerm` is a parametric type with three parameters.\n",
+    "The first is an operator type `<:AbstractOp`.\n",
+    "The second specifies the type of storage for the string of operators.\n",
+    "The third is the type of the coefficient.\n",
+    "The aliases `PauliTerm` and `FermiTerm` each have a concrete first\n",
+    "paramter, `Pauli` and `FermiOp` respectively. The remaining two parameters are free.\n",
+    "By default, the second parameter is a dense `Vector`. For the concrete operator types that we\n",
+    "have implemented, `Pauli`, and `FermiOp`, it will be an effcient, packed array of bitstype objects.\n",
+    "The type of the coefficient is not constrained, but should support multiplication\n",
+    "and addition. It may be, for example, `ComplexF64`, or a symbolic type."
    ],
    "metadata": {}
   },
@@ -616,7 +543,7 @@
       "text/plain": "10-element PauliTerm{SparseArraysN.SparseVector{Pauli, Int64}, ComplexF64} with 3 stored entries:\nX6 Y8 Z10 * (1.0 + 1.0im)"
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 21
     }
    ],
    "cell_type": "code",
@@ -625,7 +552,7 @@
     "sparse_op(OpTerm{Pauli}(\"IIIIIXIYIZ\", 1.0 + 1.0im))"
    ],
    "metadata": {},
-   "execution_count": 24
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -642,7 +569,7 @@
       "text/plain": "10-factor PauliTerm{Vector{Pauli}, ComplexF64}:\nIIIIIXIYIZ * (1.0 + 1.0im)"
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 22
     }
    ],
    "cell_type": "code",
@@ -652,7 +579,7 @@
     "# Sums of multi-qubit/mode operators -- `OpSum`"
    ],
    "metadata": {},
-   "execution_count": 25
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
@@ -678,7 +605,7 @@
       "text/plain": "FermiOp: N"
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 23
     }
    ],
    "cell_type": "code",
@@ -689,7 +616,7 @@
     "FOps.NumberOp * FOps.NumberOp"
    ],
    "metadata": {},
-   "execution_count": 26
+   "execution_count": 23
   },
   {
    "outputs": [
@@ -699,7 +626,7 @@
       "text/plain": "FermiOp: N"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 24
     }
    ],
    "cell_type": "code",
@@ -707,7 +634,7 @@
     "FOps.Raise * FOps.Lower"
    ],
    "metadata": {},
-   "execution_count": 27
+   "execution_count": 24
   },
   {
    "cell_type": "markdown",
@@ -724,7 +651,7 @@
       "text/plain": "5-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nXIYIZ * (1 + 0im)"
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 25
     }
    ],
    "cell_type": "code",
@@ -732,7 +659,7 @@
     "t1 = PauliTerm(\"XIYIZ\")"
    ],
    "metadata": {},
-   "execution_count": 28
+   "execution_count": 25
   },
   {
    "outputs": [
@@ -742,7 +669,7 @@
       "text/plain": "5-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nYXIZZ * (1 + 0im)"
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 26
     }
    ],
    "cell_type": "code",
@@ -750,7 +677,7 @@
     "t2 = PauliTerm(\"YXIZZ\")"
    ],
    "metadata": {},
-   "execution_count": 29
+   "execution_count": 26
   },
   {
    "outputs": [
@@ -760,7 +687,7 @@
       "text/plain": "5-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nZXYZI * (0 + 1im)"
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 27
     }
    ],
    "cell_type": "code",
@@ -768,7 +695,7 @@
     "t1 * t2"
    ],
    "metadata": {},
-   "execution_count": 30
+   "execution_count": 27
   },
   {
    "cell_type": "markdown",
@@ -785,7 +712,7 @@
       "text/plain": "4-element PauliTerm{SparseArraysN.SparseVector{Pauli, Int64}, Complex{Int64}} with 4 stored entries:\nZ1 X2 Y3 Z4 * (0 + 1im)"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 28
     }
    ],
    "cell_type": "code",
@@ -793,7 +720,7 @@
     "sparse_op(t1) * sparse_op(t2)"
    ],
    "metadata": {},
-   "execution_count": 31
+   "execution_count": 28
   },
   {
    "cell_type": "markdown",
@@ -826,7 +753,7 @@
     "nothing;"
    ],
    "metadata": {},
-   "execution_count": 32
+   "execution_count": 29
   },
   {
    "cell_type": "markdown",
