modified:   notebooks/quantum_ops_intro.ipynb 	modified:   source/quantum_ops_intro.jl

--- a/notebooks/quantum_ops_intro.ipynb
+++ b/notebooks/quantum_ops_intro.ipynb
@@ -3,6 +3,31 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# QuantumOps\n",
+    "## Overview\n",
+    "\n",
+    " The main design idea was to provide a straightforward implementation of operators\n",
+    " that is sufficiently general to represent both Pauli and Fermionic operators (and possibly others);\n",
+    " The implementation should be fairly efficient, while not requiring too\n",
+    " much code specialized to the concrete types. The operators should have similar\n",
+    " functionality to `SparsePauliOp` in qiskit.quantum_info and `FermionicOp` in qiskit_nature.\n",
+    "\n",
+    "`QuantumOps` is built mainly around three levels of operator types\n",
+    "* `AbstractOp` -- representing single-particle Fermionic or Pauli operators\n",
+    "* `OpTerm` -- a parametric type implementing a string of operators as an `AbstractVector{<:AbstractOp}`\n",
+    "  and a coefficient. `OpTerm` represents a multi-particle/mode term. The string type may be a dense\n",
+    " `Vector` or a `SparseVector` (with identities not stored). The coefficient may be numeric or symbolic.\n",
+    "* `OpSum` -- a parametric type representing a sum of `OpTerm`s. `OpSum` is implemented as a `Vector`\n",
+    "  of `OpTerms` that are maintained in a canonical order.\n",
+    "\n",
+    "Some features are\n",
+    "* `QuantumOps` tries to make the structures and methods efficient, but there is little done to optimize\n",
+    "   them. Still, `QuantumOps` is often one to three orders of magnitude faster\n",
+    "   than Qiskit. [Note: This was before the series of big improvements to `SparsePauliOp`.]\n",
+    "* `QuantumOps` works together `ElectronicStructure.jl` to represent electonic Hamiltonians.\n",
+    "*  The Jordan-Wigner transform is implemented as an example.\n",
+    "*  A package `qisit_alt` provides a demonstration of Python wrappers allowing Qiskit classes as input and output.\n",
+    "\n",
     "First, import some identifiers for types"
    ],
    "metadata": {}
@@ -20,31 +45,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# QuantumOps\n",
-    "## Overview\n",
-    "\n",
-    " The main design idea was to provide a straightforward implementation of operators\n",
-    " that is sufficiently general to represent both Pauli and Fermionic operators (and possibly others);\n",
-    " to see if the implementation could be fairly efficient while not requiring too\n",
-    " much code specialized to the concrete types. The operators should have similar\n",
-    " functionality to `SparsePauliOp` in qiskit.quantum_info and `FermionicOp` in qiskit_nature.\n",
-    "\n",
-    "`QuantumOps` is built mainly around three levels of operator types\n",
-    "* `AbstractOp` -- representing single-particle Fermionic or Pauli operators\n",
-    "* `OpTerm` -- a parametric type implementing a string of operators as an `AbstractVector{<:AbstractOp}`\n",
-    "  and a coefficient. `OpTerm` represents a multi-particle/mode term. The string type may be a dense\n",
-    " `Vector` or a `SparseVector` (with identities not stored). The coefficient may be numeric or symbolic.\n",
-    "* `OpSum` a parametric type representing a sum of `OpTerm`s. `OpSum` is implemented as an `Vector`\n",
-    "  of `OpTerms` that are maintained in a canonical order.\n",
-    "\n",
-    "Some features are\n",
-    "* `QuantumOps` tries to make the structures and methods efficient, but there is little done to optimize\n",
-    "   them. Still, `QuantumOps` is often one to three orders of magnitude faster\n",
-    "   than Qiskit. [Note: This was before the series of improvements to `SparsePauliOp`.]\n",
-    "* `QuantumOps` works together `ElectronicStructure.jl` to represent electonic Hamiltonians.\n",
-    "*  The Jordan-Wigner transform is implemented as an example.\n",
-    "*  A package `qisit_alt` provides a demonstration of wrappers allowing Qiskit classes as input and output.\n",
-    "\n",
     "## Simple operators -- `AbstractOp`\n",
     "Types for Fermionic and Pauli operators on a single mode or qubit have `AbstractOp` as an ancestor.\n",
     "We have"
@@ -125,7 +125,7 @@
     "`PauliI` may be more efficient in some circumstances.\n",
     "None (almost) of `QuantumOps` is written explicitly against a subtype of `AbstractPauli`,\n",
     "so `Pauli` and `PauliI` may be used interchangeably. Eventually, probably only one of the two will be retained.\n",
-    "We won't consider `PauliI` in this document.\n",
+    "For brevity, we won't consider `PauliI` in this document.\n",
     "\n",
     "All subtypes of `AbstractPauliOp` may instantiated by an integer index like this"
    ],
@@ -322,7 +322,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "`PauliTerm` and `FermiTerm` are aliases"
+    "`PauliTerm` and `FermiTerm` are aliases in a strong sense."
    ],
    "metadata": {}
   },
@@ -375,7 +375,7 @@
    ],
    "cell_type": "code",
    "source": [
-    "PauliTerm === OpTerm{Pauli}"
+    "PauliTerm === OpTerm{Pauli} # `===` means that within the semantics of Julia they cannot be distinguished."
    ],
    "metadata": {},
    "execution_count": 15
@@ -408,31 +408,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Or, using `PauliI`"
-   ],
-   "metadata": {}
-  },
-  {
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "6-factor OpTerm{PauliI, Vector{PauliI}, ComplexF64}:\nIXIYIZ * (1.0 + 1.0im)"
-     },
-     "metadata": {},
-     "execution_count": 17
-    }
-   ],
-   "cell_type": "code",
-   "source": [
-    "OpTerm{PauliI}(\"IXIYIZ\", 1.0 + 1.0im)"
-   ],
-   "metadata": {},
-   "execution_count": 17
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "Or, for Fermionic operators"
    ],
    "metadata": {}
@@ -445,7 +420,7 @@
       "text/plain": "7-factor FermiTerm{Vector{FermiOp}, Float64}:\n++I--NE * 1.0"
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 17
     }
    ],
    "cell_type": "code",
@@ -453,7 +428,7 @@
     "OpTerm{FermiOp}(\"++I--NE\", 1.0)"
    ],
    "metadata": {},
-   "execution_count": 18
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -470,7 +445,7 @@
       "text/plain": "7-factor FermiTerm{Vector{FermiOp}, Complex{Int64}}:\n++I--NE * (1 + 0im)"
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 18
     }
    ],
    "cell_type": "code",
@@ -479,7 +454,7 @@
     "FermiTerm(\"++I--NE\")"
    ],
    "metadata": {},
-   "execution_count": 19
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -496,7 +471,7 @@
       "text/plain": "5-factor FermiTerm{Vector{FermiOp}, Complex{Int64}}:\n+-INE * (1 + 0im)"
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 19
     }
    ],
    "cell_type": "code",
@@ -504,20 +479,26 @@
     "FermiTerm(\"+-INE\")"
    ],
    "metadata": {},
-   "execution_count": 20
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
    "source": [
     "means $a_0^\\dagger a_1 a^\\dagger_3 a_3 a_4 a^\\dagger_4$.\n",
     "\n",
-    "`OpTerm` is a parametric type with three parameters.\n",
-    "The first is an operator type `<:AbstractOp`.\n",
-    "The second specifies the type of storage for the string of operators.\n",
-    "The third is the type of the coefficient.\n",
+    "`OpTerm` is a [parametric type with three parameters](https://github.ibm.com/John-Lapeyre/QuantumOps.jl/blob/045dd86a93aff579973dbcc42ce4b3fad0d1a229/src/op_term.jl#L10-L13).\n",
+    "```julia\n",
+    "struct OpTerm{W<:AbstractOp, T<:AbstractVector{W}, CoeffT} <: AbstractTerm{W, CoeffT}\n",
+    "   ops::T\n",
+    "   coeff::CoeffT\n",
+    "end\n",
+    "```\n",
+    "The first, `W` is the operator type.\n",
+    "The second, `T` specifies the type of storage for the string of operators.\n",
+    "The third, `CoeffT` is the type of the coefficient.\n",
     "The aliases `PauliTerm` and `FermiTerm` each have a concrete first\n",
-    "paramter, `Pauli` and `FermiOp` respectively. The remaining two parameters are free.\n",
-    "By default, the second parameter is a dense `Vector`. For the concrete operator types that we\n",
+    "paramter `Pauli` and `FermiOp` respectively. The remaining two parameters are free.\n",
+    "By default, constructors make the second parameter a dense `Vector`. For the concrete operator types that we\n",
     "have implemented, `Pauli`, and `FermiOp`, it will be an effcient, packed array of bitstype objects.\n",
     "The type of the coefficient is not constrained, but should support multiplication\n",
     "and addition. It may be, for example, `ComplexF64`, or a symbolic type."
@@ -543,7 +524,7 @@
       "text/plain": "10-element PauliTerm{SparseArraysN.SparseVector{Pauli, Int64}, ComplexF64} with 3 stored entries:\nX6 Y8 Z10 * (1.0 + 1.0im)"
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 20
     }
    ],
    "cell_type": "code",
@@ -552,7 +533,7 @@
     "sparse_op(OpTerm{Pauli}(\"IIIIIXIYIZ\", 1.0 + 1.0im))"
    ],
    "metadata": {},
-   "execution_count": 21
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -569,7 +550,7 @@
       "text/plain": "10-factor PauliTerm{Vector{Pauli}, ComplexF64}:\nIIIIIXIYIZ * (1.0 + 1.0im)"
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 21
     }
    ],
    "cell_type": "code",
@@ -579,7 +560,7 @@
     "# Sums of multi-qubit/mode operators -- `OpSum`"
    ],
    "metadata": {},
-   "execution_count": 22
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -605,7 +586,7 @@
       "text/plain": "FermiOp: N"
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 22
     }
    ],
    "cell_type": "code",
@@ -616,7 +597,7 @@
     "FOps.NumberOp * FOps.NumberOp"
    ],
    "metadata": {},
-   "execution_count": 23
+   "execution_count": 22
   },
   {
    "outputs": [
@@ -626,7 +607,7 @@
       "text/plain": "FermiOp: N"
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 23
     }
    ],
    "cell_type": "code",
@@ -634,7 +615,7 @@
     "FOps.Raise * FOps.Lower"
    ],
    "metadata": {},
-   "execution_count": 24
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -648,7 +629,25 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "5-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nXIYIZ * (1 + 0im)"
+      "text/plain": "1-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nX * (1 + 0im)"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "t1 = PauliTerm(\"X\")"
+   ],
+   "metadata": {},
+   "execution_count": 24
+  },
+  {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nY * (1 + 0im)"
      },
      "metadata": {},
      "execution_count": 25
@@ -656,7 +655,7 @@
    ],
    "cell_type": "code",
    "source": [
-    "t1 = PauliTerm(\"XIYIZ\")"
+    "t2 = PauliTerm(\"Y\")"
    ],
    "metadata": {},
    "execution_count": 25
@@ -666,7 +665,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "5-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nYXIZZ * (1 + 0im)"
+      "text/plain": "1-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nZ * (0 + 1im)"
      },
      "metadata": {},
      "execution_count": 26
@@ -674,7 +673,7 @@
    ],
    "cell_type": "code",
    "source": [
-    "t2 = PauliTerm(\"YXIZZ\")"
+    "t1 * t2"
    ],
    "metadata": {},
    "execution_count": 26
@@ -684,7 +683,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "5-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nZXYZI * (0 + 1im)"
+      "text/plain": "5-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nXIYIZ * (1 + 0im)"
      },
      "metadata": {},
      "execution_count": 27
@@ -692,10 +691,46 @@
    ],
    "cell_type": "code",
    "source": [
-    "t1 * t2"
+    "t1 = PauliTerm(\"XIYIZ\")"
    ],
    "metadata": {},
    "execution_count": 27
+  },
+  {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "5-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nYXIZZ * (1 + 0im)"
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "t2 = PauliTerm(\"YXIZZ\")"
+   ],
+   "metadata": {},
+   "execution_count": 28
+  },
+  {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "5-factor PauliTerm{Vector{Pauli}, Complex{Int64}}:\nZXYZI * (0 + 1im)"
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "t1 * t2"
+   ],
+   "metadata": {},
+   "execution_count": 29
   },
   {
    "cell_type": "markdown",
@@ -712,7 +747,7 @@
       "text/plain": "4-element PauliTerm{SparseArraysN.SparseVector{Pauli, Int64}, Complex{Int64}} with 4 stored entries:\nZ1 X2 Y3 Z4 * (0 + 1im)"
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 30
     }
    ],
    "cell_type": "code",
@@ -720,7 +755,7 @@
     "sparse_op(t1) * sparse_op(t2)"
    ],
    "metadata": {},
-   "execution_count": 28
+   "execution_count": 30
   },
   {
    "cell_type": "markdown",
@@ -744,16 +779,31 @@
    "metadata": {}
   },
   {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "16-element Vector{PauliTerm{Vector{Pauli}, Complex{Int64}}}:\nII * (1 + 0im)\nIX * (1 + 0im)\nIY * (1 + 0im)\nIZ * (1 + 0im)\nXI * (1 + 0im)\nXX * (1 + 0im)\nXY * (1 + 0im)\nXZ * (1 + 0im)\nYI * (1 + 0im)\nYX * (1 + 0im)\nYY * (1 + 0im)\nYZ * (1 + 0im)\nZI * (1 + 0im)\nZX * (1 + 0im)\nZY * (1 + 0im)\nZZ * (1 + 0im)\n"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "collect(QuantumOps.pauli_basis(2))  # collect the generator in an `Array`"
+   ],
+   "metadata": {},
+   "execution_count": 31
+  },
+  {
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "collect(QuantumOps.pauli_basis(2))\n",
-    "\n",
-    "\n",
     "nothing;"
    ],
    "metadata": {},
-   "execution_count": 29
+   "execution_count": 32
   },
   {
    "cell_type": "markdown",
