--- a/notebooks/quantum_ops_performance_demo.ipynb
+++ b/notebooks/quantum_ops_performance_demo.ipynb
@@ -29,6 +29,7 @@
     "\n",
     "# import all default symbols for interactive demo\n",
     "using QuantumOps\n",
+    "using QuantumOps: AbstractOp\n",
     "using BenchmarkTools\n",
     "import LinearAlgebra\n",
     "import SparseArrays\n",
@@ -110,7 +111,7 @@
    ],
    "cell_type": "code",
    "source": [
-    "Pauli <: AbstractPauli"
+    "Pauli <: AbstractPauli <: AbstractOp"
    ],
    "metadata": {},
    "execution_count": 4
@@ -118,7 +119,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Only a very small amount of code depends on the internals of `Pauli`. Almost everything is coded against `AbstractPauli`. The developer almost never encounters the implementation of `Pauli`, and the user never does.\n",
+    "Only a very small amount of code depends on the internals of `Pauli`.\n",
+    "Almost everything is coded against `AbstractOp` and `AbstractPauli`. The developer almost never encounters the implementation of `Pauli`, and the user never does.\n",
     "But, if you want, you can see it this way."
    ],
    "metadata": {}
@@ -156,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.397 ns (0 allocations: 0 bytes)\n"
+      "  1.816 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -174,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.978 ns (0 allocations: 0 bytes)\n"
+      "  1.397 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -206,13 +208,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  30.987 ns (1 allocation: 128 bytes)\n"
+      "  31.548 ns (1 allocation: 128 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2×2 Matrix{ComplexF64}:\n 0.0-0.231871im  0.0-0.0736358im\n 0.0+0.732411im  0.0+0.0307049im"
+      "text/plain": "2×2 Matrix{ComplexF64}:\n 0.0-0.393175im  0.0-0.278712im\n 0.0+0.944613im  0.0+0.0856094im"
      },
      "metadata": {},
      "execution_count": 8
@@ -233,13 +235,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  162.629 ns (1 allocation: 128 bytes)\n"
+      "  167.643 ns (1 allocation: 128 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2×2 Matrix{ComplexF64}:\n 0.0-0.231871im  0.0-0.0736358im\n 0.0+0.732411im  0.0+0.0307049im"
+      "text/plain": "2×2 Matrix{ComplexF64}:\n 0.0-0.393175im  0.0-0.278712im\n 0.0+0.944613im  0.0+0.0856094im"
      },
      "metadata": {},
      "execution_count": 9
@@ -265,7 +267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  19.545 ns (1 allocation: 80 bytes)\n"
+      "  19.825 ns (1 allocation: 80 bytes)\n"
      ]
     },
     {
@@ -330,13 +332,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  47.858 ns (1 allocation: 80 bytes)\n"
+      "  45.550 ns (1 allocation: 80 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Complex{Int64}}:\nXXYYZYXZYY * (0 - 1im)"
+      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Complex{Int64}}:\nYYXIIIYZIX * (0 - 1im)"
      },
      "metadata": {},
      "execution_count": 12
@@ -367,13 +369,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  16.693 μs (4 allocations: 256 bytes)\n"
+      "  17.112 μs (4 allocations: 256 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "PyObject Pauli('-iZYIIXIXYIY')"
+      "text/plain": "PyObject Pauli('IIYYIYZZXI')"
      },
      "metadata": {},
      "execution_count": 13
@@ -399,7 +401,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "343.044401386906"
+      "text/plain": "329.11914408213033"
      },
      "metadata": {},
      "execution_count": 14
@@ -427,7 +429,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "9.980222841225627"
+      "text/plain": "9.941453940066593"
      },
      "metadata": {},
      "execution_count": 15
@@ -458,7 +460,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "1.783106292280604"
+      "text/plain": "1.8762629890341425"
      },
      "metadata": {},
      "execution_count": 16
@@ -496,7 +498,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIZIIYYIIYX * 0.05425974170044539\nXIXIXIZYZY * -2.7390949033463925\nXZXZXXZYIX * -0.24096050473044167\nYIZXZZZYIZ * -0.7710663263211126\nYXIXIZZXXI * 0.808640069878089\nYXYYZXYXIY * 0.6796656228470329\nYXZYIYYYXY * 1.2675944682701392\nYZIXXIYZZY * 0.8075059832239793\nYZZIXXIYYZ * -0.0801437544902149\nZYIZIIYYZX * 0.5369275442706594"
+      "text/plain": "10x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIZZZZZXZZX * 0.8611519091242552\nXIZZYYYZZZ * -0.21067779500713502\nXXZIIXIZXI * 0.3131118964796491\nXYZYIIYIYZ * -0.1137000255499288\nXYZZZIIZXZ * 0.6876866226528037\nYIIXIXXXZZ * -0.5254748605290915\nYYIYIIIIZX * 0.30068065416003104\nYYZXIYXIII * -2.2059166978944567\nYYZXZIIXXY * -0.5575695590816557\nZIIYYXIYZZ * -2.243952183412215"
      },
      "metadata": {},
      "execution_count": 17
@@ -516,7 +518,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nYXIXIZZXXI * 0.808640069878089, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64})"
+      "text/plain": "(10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nXYZZZIIZXZ * 0.6876866226528037, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64})"
      },
      "metadata": {},
      "execution_count": 18
@@ -542,7 +544,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "9x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIZIIYYIIYX * 0.05425974170044539\nXIXIXIZYZY * -2.7390949033463925\nXZXZXXZYIX * -0.24096050473044167\nYIZXZZZYIZ * -0.7710663263211126\nYXYYZXYXIY * 0.6796656228470329\nYXZYIYYYXY * 1.2675944682701392\nYZIXXIYZZY * 0.8075059832239793\nYZZIXXIYYZ * -0.0801437544902149\nZYIZIIYYZX * 0.5369275442706594"
+      "text/plain": "9x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIZZZZZXZZX * 0.8611519091242552\nXIZZYYYZZZ * -0.21067779500713502\nXXZIIXIZXI * 0.3131118964796491\nXYZYIIYIYZ * -0.1137000255499288\nYIIXIXXXZZ * -0.5254748605290915\nYYIYIIIIZX * 0.30068065416003104\nYYZXIYXIII * -2.2059166978944567\nYYZXZIIXXY * -0.5575695590816557\nZIIYYXIYZZ * -2.243952183412215"
      },
      "metadata": {},
      "execution_count": 19
@@ -606,7 +608,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nIIIZXYIYXI * -1.3082862572652425"
+      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nIXIXXZXYYX * 1.0799836853519675"
      },
      "metadata": {},
      "execution_count": 22
@@ -625,7 +627,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  68.841 ns (0 allocations: 0 bytes)\n"
+      "  62.788 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -657,7 +659,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "16x2 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{ComplexF64}}:\nII * (0.5837045211182654 + 0.0im)\nIX * (0.40824766216912733 + 0.0im)\nIY * (0.0 + 0.04880407180060198im)\nIZ * (0.16922132321596886 + 0.0im)\nXI * (0.5916283675713282 + 0.0im)\nXX * (0.46491816867223995 + 0.0im)\nXY * (0.0 + 0.022793411491475124im)\nXZ * (0.20642067369709227 + 0.0im)\nYI * (0.0 + 0.18583171964394637im)\nYX * (0.0 + 0.37128186366917637im)\nYY * (-0.07364808678283086 - 0.0im)\nYZ * (0.0 - 0.005371388014022399im)\nZI * (0.03884718312760724 + 0.0im)\nZX * (0.0757019819287228 + 0.0im)\nZY * (0.0 + 0.2428486872530303im)\nZZ * (-0.11083725747300435 + 0.0im)"
+      "text/plain": "16x2 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{ComplexF64}}:\nII * (0.47535035018999316 + 0.0im)\nIX * (0.3262739924485931 + 0.0im)\nIY * (0.0 + 0.18552696151796855im)\nIZ * (-0.07362927391444071 + 0.0im)\nXI * (0.13546531376952592 + 0.0im)\nXX * (0.380063991813433 + 0.0im)\nXY * (0.0 + 0.009783092127528453im)\nXZ * (-0.043113348704585164 + 0.0im)\nYI * (0.0 + 0.11088439771867864im)\nYX * (0.0 - 0.0008181280004781188im)\nYY * (0.2836762402956309 - 0.0im)\nYZ * (0.0 - 0.027218075093257077im)\nZI * (0.10605558526440695 + 0.0im)\nZX * (0.2063647614493851 + 0.0im)\nZY * (0.0 + 0.08736974609672504im)\nZZ * (0.13685446784451108 + 0.0im)"
      },
      "metadata": {},
      "execution_count": 24
@@ -708,7 +710,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "0.082269629"
+      "text/plain": "0.082784806"
      },
      "metadata": {},
      "execution_count": 26
@@ -728,7 +730,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "8.59363408"
+      "text/plain": "8.499687047"
      },
      "metadata": {},
      "execution_count": 27
@@ -754,7 +756,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "104.45694461561264"
+      "text/plain": "102.67206577738432"
      },
      "metadata": {},
      "execution_count": 28
@@ -880,7 +882,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "3×5 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n +i  +1  0   +i  -i\n +1  +1  +i  +1  -i\n +1  +i  +1  -1  +i"
+      "text/plain": "3×5 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n 0   -i  +1  -i  -1\n -1  -i  -1  -i  0\n +i  0   -1  +i  +1"
      },
      "metadata": {},
      "execution_count": 33
@@ -925,7 +927,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  63.697 μs (1 allocation: 16 bytes)\n"
+      "  63.837 μs (1 allocation: 16 bytes)\n"
      ]
     },
     {
@@ -1002,7 +1004,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ZZYZ"
+      "XYYI"
      ]
     }
    ],
@@ -1041,7 +1043,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  716.583 ns (3 allocations: 5.38 KiB)\n"
+      "  743.509 ns (3 allocations: 5.52 KiB)\n"
      ]
     }
    ],
@@ -1058,7 +1060,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  679.052 ns (3 allocations: 1.12 KiB)\n"
+      "  666.608 ns (3 allocations: 1.12 KiB)\n"
      ]
     }
    ],
