--- a/notebooks/quantum_ops_performance_demo.ipynb
+++ b/notebooks/quantum_ops_performance_demo.ipynb
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.816 ns (0 allocations: 0 bytes)\n"
+      "  1.467 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.397 ns (0 allocations: 0 bytes)\n"
+      "  0.978 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -208,23 +208,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  31.548 ns (1 allocation: 128 bytes)\n"
+      "  30.706 ns (1 allocation: 128 bytes)\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "2×2 Matrix{ComplexF64}:\n 0.0-0.393175im  0.0-0.278712im\n 0.0+0.944613im  0.0+0.0856094im"
-     },
-     "metadata": {},
-     "execution_count": 8
     }
    ],
    "cell_type": "code",
    "source": [
     "mY = Matrix(Y) # convert Y to a `Matrix`\n",
     "\n",
-    "@btime Y * $m"
+    "@btime Y * $m;"
    ],
    "metadata": {},
    "execution_count": 8
@@ -235,21 +227,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  167.643 ns (1 allocation: 128 bytes)\n"
+      "  167.162 ns (1 allocation: 128 bytes)\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "2×2 Matrix{ComplexF64}:\n 0.0-0.393175im  0.0-0.278712im\n 0.0+0.944613im  0.0+0.0856094im"
-     },
-     "metadata": {},
-     "execution_count": 9
     }
    ],
    "cell_type": "code",
    "source": [
-    "@btime $mY * $m"
+    "@btime $mY * $m;"
    ],
    "metadata": {},
    "execution_count": 9
@@ -267,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  19.825 ns (1 allocation: 80 bytes)\n"
+      "  19.265 ns (1 allocation: 80 bytes)\n"
      ]
     },
     {
@@ -332,13 +316,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  45.550 ns (1 allocation: 80 bytes)\n"
+      "  48.686 ns (1 allocation: 80 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Complex{Int64}}:\nYYXIIIYZIX * (0 - 1im)"
+      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Complex{Int64}}:\nZIIZIYZZII * (0 - 1im)"
      },
      "metadata": {},
      "execution_count": 12
@@ -369,13 +353,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  17.112 μs (4 allocations: 256 bytes)\n"
+      "  17.042 μs (4 allocations: 256 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "PyObject Pauli('IIYYIYZZXI')"
+      "text/plain": "PyObject Pauli('ZZIYIZZXXI')"
      },
      "metadata": {},
      "execution_count": 13
@@ -401,7 +385,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "329.11914408213033"
+      "text/plain": "338.35405295315684"
      },
      "metadata": {},
      "execution_count": 14
@@ -429,7 +413,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "9.941453940066593"
+      "text/plain": "9.896593340281967"
      },
      "metadata": {},
      "execution_count": 15
@@ -460,7 +444,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "1.8762629890341425"
+      "text/plain": "1.816721145435293"
      },
      "metadata": {},
      "execution_count": 16
@@ -498,7 +482,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIZZZZZXZZX * 0.8611519091242552\nXIZZYYYZZZ * -0.21067779500713502\nXXZIIXIZXI * 0.3131118964796491\nXYZYIIYIYZ * -0.1137000255499288\nXYZZZIIZXZ * 0.6876866226528037\nYIIXIXXXZZ * -0.5254748605290915\nYYIYIIIIZX * 0.30068065416003104\nYYZXIYXIII * -2.2059166978944567\nYYZXZIIXXY * -0.5575695590816557\nZIIYYXIYZZ * -2.243952183412215"
+      "text/plain": "10x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIXYXXXXXIY * 0.07661728906998562\nIZIXYZIXIX * -1.052392815983234\nIZYIIZZIZI * -0.46285888670999187\nYIIYZIYXXY * -1.3648851461793008\nYYIZXYYIIY * -0.789634375651957\nYZYXYIXXZY * 0.5659266927269863\nZIIXZXYXZX * -2.011571590977089\nZYXXZIZIII * -0.5990698209583774\nZZIZYXZYZZ * 0.9627293335635448\nZZXZZZYZXY * -0.9198270974851278"
      },
      "metadata": {},
      "execution_count": 17
@@ -518,7 +502,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nXYZZZIIZXZ * 0.6876866226528037, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64})"
+      "text/plain": "(10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nYYIZXYYIIY * -0.789634375651957, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64})"
      },
      "metadata": {},
      "execution_count": 18
@@ -544,7 +528,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "9x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIZZZZZXZZX * 0.8611519091242552\nXIZZYYYZZZ * -0.21067779500713502\nXXZIIXIZXI * 0.3131118964796491\nXYZYIIYIYZ * -0.1137000255499288\nYIIXIXXXZZ * -0.5254748605290915\nYYIYIIIIZX * 0.30068065416003104\nYYZXIYXIII * -2.2059166978944567\nYYZXZIIXXY * -0.5575695590816557\nZIIYYXIYZZ * -2.243952183412215"
+      "text/plain": "9x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIXYXXXXXIY * 0.07661728906998562\nIZIXYZIXIX * -1.052392815983234\nIZYIIZZIZI * -0.46285888670999187\nYIIYZIYXXY * -1.3648851461793008\nYZYXYIXXZY * 0.5659266927269863\nZIIXZXYXZX * -2.011571590977089\nZYXXZIZIII * -0.5990698209583774\nZZIZYXZYZZ * 0.9627293335635448\nZZXZZZYZXY * -0.9198270974851278"
      },
      "metadata": {},
      "execution_count": 19
@@ -608,7 +592,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nIXIXXZXYYX * 1.0799836853519675"
+      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nIIZXYZXIYI * -1.4948916076441654"
      },
      "metadata": {},
      "execution_count": 22
@@ -627,7 +611,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  62.788 ns (0 allocations: 0 bytes)\n"
+      "  63.351 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -659,7 +643,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "16x2 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{ComplexF64}}:\nII * (0.47535035018999316 + 0.0im)\nIX * (0.3262739924485931 + 0.0im)\nIY * (0.0 + 0.18552696151796855im)\nIZ * (-0.07362927391444071 + 0.0im)\nXI * (0.13546531376952592 + 0.0im)\nXX * (0.380063991813433 + 0.0im)\nXY * (0.0 + 0.009783092127528453im)\nXZ * (-0.043113348704585164 + 0.0im)\nYI * (0.0 + 0.11088439771867864im)\nYX * (0.0 - 0.0008181280004781188im)\nYY * (0.2836762402956309 - 0.0im)\nYZ * (0.0 - 0.027218075093257077im)\nZI * (0.10605558526440695 + 0.0im)\nZX * (0.2063647614493851 + 0.0im)\nZY * (0.0 + 0.08736974609672504im)\nZZ * (0.13685446784451108 + 0.0im)"
+      "text/plain": "16x2 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{ComplexF64}}:\nII * (0.6098381047006239 + 0.0im)\nIX * (0.6250475912747843 + 0.0im)\nIY * (0.0 + 0.09895093323554521im)\nIZ * (0.16735056406884438 + 0.0im)\nXI * (0.33470076088113704 + 0.0im)\nXX * (0.5942269038131622 + 0.0im)\nXY * (0.0 - 0.05442648720930485im)\nXZ * (0.26332863591614697 + 0.0im)\nYI * (0.0 - 0.14961168266267633im)\nYX * (0.0 + 0.11553941613966254im)\nYY * (-0.06618554137476332 - 0.0im)\nYZ * (0.0 - 0.20663812569246615im)\nZI * (0.012307292591823893 + 0.0im)\nZX * (-0.12555658352121712 + 0.0im)\nZY * (0.0 + 0.043623963145295375im)\nZZ * (0.1474370199923803 + 0.0im)"
      },
      "metadata": {},
      "execution_count": 24
@@ -710,7 +694,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "0.082784806"
+      "text/plain": "0.083343556"
      },
      "metadata": {},
      "execution_count": 26
@@ -730,7 +714,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "8.499687047"
+      "text/plain": "8.54168941"
      },
      "metadata": {},
      "execution_count": 27
@@ -756,7 +740,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "102.67206577738432"
+      "text/plain": "102.48770054879827"
      },
      "metadata": {},
      "execution_count": 28
@@ -882,7 +866,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "3×5 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n 0   -i  +1  -i  -1\n -1  -i  -1  -i  0\n +i  0   -1  +i  +1"
+      "text/plain": "3×5 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n 0   0   0   -i  -1\n -1  +i  +i  +i  +1\n +1  -1  -i  +i  -i"
      },
      "metadata": {},
      "execution_count": 33
@@ -927,7 +911,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  63.837 μs (1 allocation: 16 bytes)\n"
+      "  63.906 μs (1 allocation: 16 bytes)\n"
      ]
     },
     {
@@ -1004,7 +988,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XYYI"
+      "IXZI"
      ]
     }
    ],
@@ -1043,7 +1027,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  743.509 ns (3 allocations: 5.52 KiB)\n"
+      "  663.289 ns (3 allocations: 2.88 KiB)\n"
      ]
     }
    ],
@@ -1060,7 +1044,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  666.608 ns (3 allocations: 1.12 KiB)\n"
+      "  666.805 ns (3 allocations: 1.12 KiB)\n"
      ]
     }
    ],
